# AutoDoc

./: .gitmodules  ADP.txt  CMakeLists.txt  LP.md  LP.txt  README.md  RXP.txt  adp.h  autodoc.cpp  autodocd.cpp  config.h.in  logc.h  network_utils.h  opencv_utils.h  shell.h  ui.h
client/: CMakeLists.txt  autodoc.cpp  config.h  config.h.in  ui.h
daemon/: CMakeLists.txt  autodocd.cpp  config.h  lp.h  shell.h
